2009-04-17  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 568499 – CellRendererPixbuf stock-size property has wrong type

	* gobject/pygtype.c (pyg_enum_get_value): Also accept long
	integers.

2009-04-15  Götz Waschk  <waschk@mandriva.org>

	Bug 550231 – missing dep on libffi in pygobject-2.0.pc

	* configure.ac: Define `LIBFFI_PC' subst.

	* pygobject-2.0.pc.in:
	* pygobject-2.0-uninstalled.pc.in: Use it.

2009-04-15  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 555613 – gio.VolumeMonitor segfaults

	* gio/gvolumemonitor.override (_wrap_g_volume_monitor_tp_new): New
	function, return the singleton object.

2009-04-14  James Westby  <jw+debian@jameswestby.net>

	Bug 573753 – DeprecationWarning under python 2.6

	* codegen/definitions.py (ReturnType.__init__): Don't pass
	'type_name' argument to super __init__.

2009-04-14  Krzesimir Nowak  <krnowak@svn.gnome.org>

	Bug 576566 – several scripts from codegen directory are not
	distributed

	* codegen/Makefile.am (codegen_PYTHON): List several missing
	scripts.

2009-04-14  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_copy_async) change argument order
	to keep it consistent with the other methods.

2009-04-13  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 578870 – memory leak in gio.File.copy_async

	* gio/gio.override (PyGIONotify): Add 'slaves' field.
	(pygio_notify_new_slave): New function.
	(pygio_notify_reference_callback): Recurse for slaves, if any.
	(pygio_notify_free): Likewise.

	* gio/gfile.override (file_progress_callback_marshal): Use new
	chaining functionality to avoid leaking the second PyGIONotify
	structure.  Rename 'callback' as 'progress_callback' for clarity.

2009-04-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs: (g_file_monitor) should accept None
	for cancellable and set the default flag to G_FILE_MONITOR_NONE.

2009-04-09  Jonathan Matthew  <jonathan@d14n.org>

	Bug 575781 – pyg_notify_free needs to ensure it has GIL before calling
	Py_XDECREF
