@@ -1,3 +1,11 @@
+2009-05-04  Siavash Safi  <siavash@siavashs.org>
+
+	Bug 579275 – Patch which removes dll api in headers and adds
+	a namespace option
+
+	* codegen/h2def.py: Add -n --namespace option and the code to remove
+	dll API in headers, Added documentation
+
 2009-04-17  Paul Pogonyshev  <pogonyshev@gmx.net>
 
 	Bug 568499 – CellRendererPixbuf stock-size property has wrong type
